--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,3 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/alho
-spring.datasource.username=root
-spring.datasource.password=coti
-#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-#spring.jpa.show-sql: true
-
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#Perfil ativo
+spring.profiles.active=${APP_PROFILE:test}
+spring.jpa.open-in-view=false
