--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 #Perfil ativo
 spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
+
+#Variaveis de ambiente para envio de email
+spring.mail.username=${MY-EMAIL}
+spring.mail.password=${MY-PASSWORD}
+
