Refatorando o projeto.Implementando o Java Reflection.Populando o banco de dados

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -14,15 +14,17 @@
 
 #---------------------------------------------------------------------------------------------
 
-# H2 CONNECTION SETTINGS #
+	# H2 CONNECTION SETTINGS #
+# URL-> http://localhost:8080/h2-console/
+# Dados de conexão
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
+# Configuração do cliente web do banco h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
+# Configuração para exibir o SQL no console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
