--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,15 +1,15 @@
 # MYSQL Database configuration #
-#spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/alho
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/alho
 
-#spring.datasource.username=root
-#spring.datasource.password=1905
+spring.datasource.username=root
+spring.datasource.password=coti
 
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 #---------------------------------------------------------------------------------------------
@@ -17,14 +17,14 @@
 	# H2 CONNECTION SETTINGS #
 # URL-> http://localhost:8080/h2-console/
 # Dados de conexão
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 # Configuração do cliente web do banco h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-# Configuração para exibir o SQL no console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+## Configuração para exibir o SQL no console
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
