--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,7 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=coti
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
+##spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
