Ajustes para Deploy em producao.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,46 @@
-#Perfil ativo
-spring.profiles.active=${APP_PROFILE:test}
-spring.jpa.open-in-view=false
+##Perfil ativo
+#spring.profiles.active=${APP_PROFILE:test}
+#spring.jpa.open-in-view=false
+#
+##Variaveis de ambiente para envio de email
+#spring.mail.username=${MY-EMAIL}
+#spring.mail.password=${MY-PASSWORD}
 
-#Variaveis de ambiente para envio de email
-spring.mail.username=${MY-EMAIL}
-spring.mail.password=${MY-PASSWORD}
+# MYSQL Database configuration #
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/alho
+#spring.datasource.url=jdbc:mysql://localhost:3306/eric2535_alho
+
+spring.datasource.username=root
+spring.datasource.password=coti
+#spring.datasource.username=eric2535_main
+#spring.datasource.password=BB1Enzo2023
+
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+logging.level.root= INFO;
+
+
+#---------------------------------------------------------------------------------------------
+
+	# H2 CONNECTION SETTINGS #
+# URL-> http://localhost:8080/h2-console/
+# Dados de conexão
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+# Configuração do cliente web do banco h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+## Configuração para exibir o SQL no console
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 
